<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.news.news_card.view.NewsCard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameLayoutDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayoutTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayoutAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:id="@+id/textViewAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayoutContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:id="@+id/textViewContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayuoutUrlMore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:id="@+id/textViewReadMoreUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/readMoreUrl" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayoutCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <ImageView
                    android:id="@+id/imageViewCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="TODO" />
            </FrameLayout>



        </LinearLayout>
    </ScrollView>

</FrameLayout>