<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.news.screens.FragmentDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvDetailDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle" />

            <TextView
                android:id="@+id/tvDetailTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/time"
                app:layout_constraintStart_toEndOf="@+id/tvDetailDate"
                app:layout_constraintTop_toTopOf="@+id/tvDetailDate" />

            <TextView
                android:id="@+id/tvDetailAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/author"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailDate" />

            <TextView
                android:id="@+id/tvDetailContent"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif"
                android:text="@string/content"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailAuthor" />

            <TextView
                android:id="@+id/tvDetailReadMoreUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:autoLink="web"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/readMoreUrl"
                android:textColorLink="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivDetailCard"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvDetailTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="serif"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/ivDetailCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="TODO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailContent"
                tools:src="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>